src/test/deca/context/invalid/created/object/equals_A_int.deca
// Description :
//    test equals entre un A et un int
//
// Resultats :
//		Erreur contextuelle
//    	Ligne 11:  (3.74) La signature ne correspond pas aux paramètres
class A{}
{
A a;
int b;
int c = a.equals(b);
}
